# bjk-pixlik

./: .gitignore  CLAUDE.md  README.md  pixel_likelihood.py  pyproject.toml  requirements.txt  test_memory_modes.py  test_onthefly.py  test_parallel.py
comparisons/: compute_gelman_rubin_nmt.py  diag_bjk_nside32_dell8.py  diag_bjk_vs_almanac.py  plot_combined_nmt.py  plot_comparison_perchain_nmt.py  plot_diagnostic_nmt_starts.py  plot_fsky01_eb_nmt.py  plot_overlay_nmt.py  plot_overlay_tt_bjk_nmt.py  run_bjk_fsky05_midnoise.py  run_bjk_nmt.py  run_bjk_tt_fsky01.py  run_bjk_tt_fsky1.py  run_namaster_fsky05_midnoise.py
data/sim_tombin-1_nside128_flatEE/: sim_out_channel_0_data.fits
data/sim_tombin-1_nside128_flatTT/: sim_out_channel_0_data.fits  sim_out_channel_0_nInv.fits
derivations/: find_te_formula.py  verify_eb_tb.py
docs/: band_diagonal_approximation.md  bjk98_paper_verification.md  bjk_and_approximate_inference.md  code_review_bugs_and_optimizations.md  comparison_with_historical_code.md  complexity_scaling_analysis.md  disk_based_kernel_storage.md  flatsky_namaster_resolution_june2026.md  implementation_plan_onthefly_and_parallel.md  namaster_comparison_euclid_rr2.md
examples/: compare_bjk_almanac_eb.py  diagnose_bb_bias.py  plot_bjk_vs_flatsky_steelman.py  plot_bjk_vs_flatsky_three_spectra.py  run_bjk_ee.py  run_bjk_euclid_eb_n1.py  run_bjk_euclid_ee.py  run_bjk_fsky05.py  run_bjk_tt.py  test_sky_comparison.py
tests/: test_band_model.py  test_full_sky_tt.py  test_general.py  test_memory_modes.py  test_newton_boundary.py  test_onthefly.py  test_parallel.py
